...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/search_view"
...
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white_base"
        android:paddingHorizontal="10dp">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/auto_complete_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/result_section"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/elevation_temp"
...
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_below="@id/soil_table"
                        android:layout_centerHorizontal="true"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_search"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        tools:listitem="@layout/item_plant"
                        android:elevation="10dp"
...
